<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="title_playlist_maker">Playlist maker</string>
    <string name="title_search">Поиск</string>
    <string name="button_search_text">Поиск</string>
    <string name="button_media_text">Медиатека</string>
    <string name="button_settings_text">Настройки</string>
    <string name="theme_text">Темная тема</string>
    <string name="share_text">Поделиться приложением</string>
    <string name="support_text">Написать в поддержку</string>
    <string name="user_text">Пользовательское соглашение</string>
    <string name="no_apps_available_error">Нет доступных приложений для отправки</string>
    <string name="share_label">Поделиться через</string>
    <string name="email">lastig01.11@gmail.com</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="mail_topic">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="practicum_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="edit_search">Поиск</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="connect_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="looking_for">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration_text">Длительность</string>
    <string name="album_text">Альбом</string>
    <string name="year_text">Год</string>
    <string name="style_text">Жанр</string>
    <string name="country_text">Страна</string>
    <string name="load_track_error">Не удалось загрузить трек</string>
    <string name="media_library">Медиатека</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="favourites">Избранные треки</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists_message">Вы не создали\n ни одного плейлиста</string>
    <string name="media_library_is_empty">Ваша медиатека пуста</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_info">Несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="close">Завершить</string>
    <string name="playlist_created_message">Плейлист "%1$s" создан</string>
    <string name="playlist_changed_message">Плейлист "%1$s" обновлен</string>
    <string name="track_count_plural">%1$d треков</string>
    <string name="track_count_singular">%1$d трек</string>
    <string name="track_count_few">%1$d трека</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="create_playlist">Создать плейлист</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="no_tracks">В этом плейлисте еще нет треков</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_title">Хотите удалить плейлист \"%1$s\"?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="delete_track_message">Хотите удалить трек?</string>
    <string name="empty_playlist_share_message">В этом плейлисте еще нет списка треков, которым можно поделиться</string>
    <string name="share_playlist_title">Поделиться плейлистом</string>
    <string name="duration_format">%d мин</string>
    <string name="playlist_not_found">Плейлист не найден</string>
    <string name="error">Ошибка</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="tracks_duration_format">%d:%02d</string>


</resources>