<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:divider="@drawable/divider"
    android:showDividers="middle"
    android:paddingStart="@dimen/padding_main"
    android:paddingBottom="@dimen/padding_main"
    android:paddingEnd="@dimen/padding_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title"
        android:background="@color/blue"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_playlist_maker"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:fontFamily="@font/ys_text_medium"
            android:textSize="22sp" />
    </LinearLayout>

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:cornerRadius="16dp"
        android:text="@string/button_search_text"
        android:fontFamily="@font/ys_text_medium"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:icon="@drawable/search_icon"
        app:iconPadding="10dp"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        />
    <Button
        android:id="@+id/media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:cornerRadius="16dp"
        android:text="@string/button_media_text"
        android:textColor="@color/black"
        android:fontFamily="@font/ys_text_medium"
        android:textSize="22sp"
        android:textAllCaps="false"
        app:icon="@drawable/media_icon"
        app:iconPadding="10dp"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:cornerRadius="16dp"
        android:text="@string/button_settings_text"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:icon="@drawable/settings_icon"
        android:fontFamily="@font/ys_text_medium"
        android:textSize="22sp"
        app:iconPadding="10dp"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        />

</LinearLayout>