<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".media.ui.fragments.FragmentNewPlaylist">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="80dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/playlistToolbar"
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_title"
            android:background="?attr/colorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/new_playlist"
            app:titleTextAppearance="@style/ToolbarTitleText" />

        <ImageView
            android:id="@+id/imagePlaylist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/album_bg"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playlistToolbar" />


        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_photo"
            app:layout_constraintBottom_toBottomOf="@+id/imagePlaylist"
            app:layout_constraintEnd_toEndOf="@+id/imagePlaylist"
            app:layout_constraintStart_toStartOf="@+id/imagePlaylist"
            app:layout_constraintTop_toTopOf="@+id/imagePlaylist" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/albumCover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="icon, imagePlaylist" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playlistName"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:hint="@string/name"
            android:textColorHint="@color/box_stroke_color"
            app:boxStrokeColor="@color/box_stroke_color"
            app:boxStrokeWidthFocused="1dp"
            app:hintTextAppearance="@style/Hint"
            app:hintTextColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/imagePlaylist">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/playlistNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:maxLength="30"
                android:maxLines="1"
                android:textAppearance="@style/editTextHint"
                android:textColor="@color/menu_item"
                android:imeOptions="actionDone"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playlistDescription"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/description"
            android:textColorHint="@color/box_stroke_color"
            app:boxStrokeColor="@color/box_stroke_color"
            app:boxStrokeWidth="1dp"
            app:hintTextAppearance="@style/Hint"
            app:hintTextColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/playlistName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/playlistDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:maxLength="30"
                android:maxLines="1"
                android:textAppearance="@style/editTextHint"
                android:textColor="@color/menu_item"
                android:imeOptions="actionDone"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/createButton"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginHorizontal="17dp"
            android:layout_marginTop="162dp"
            android:background="@drawable/create_button_bg"
            android:enabled="false"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:letterSpacing="0"
            android:text="@string/create"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playlistDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>