<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/playerToolbar"
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title"
        android:background="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/ToolbarTitleText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/playerToolbar"
        app:srcCompat="@drawable/mock_image" />

    <TextView
        android:id="@+id/track"
        style="@style/TimeStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/image"
        tools:text="Yesterday" />

    <TextView
        android:id="@+id/trackOwner"
        style="@style/TimeStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/track"
        tools:text="The Beatles" />

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:background="@drawable/ic_add"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/trackOwner"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_play"
        app:layout_constraintEnd_toEndOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/trackOwner" />

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:background="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="@+id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/trackOwner"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/currentTime"
        style="@style/TimeStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/playButton"
        tools:text="2:33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/textLeftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <TextView
        android:id="@+id/durationTitle"
        style="@style/PlayerTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/duration_text"
        app:layout_constraintStart_toStartOf="@id/textLeftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/currentTime" />

    <TextView
        android:id="@+id/albumTitle"
        style="@style/PlayerTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/album_text"
        app:layout_constraintStart_toStartOf="@id/textLeftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/durationTitle" />

    <TextView
        android:id="@+id/yearTitle"
        style="@style/PlayerTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/year_text"
        app:layout_constraintStart_toStartOf="@id/textLeftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/albumTitle" />

    <TextView
        android:id="@+id/styleTitle"
        style="@style/PlayerTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/style_text"
        app:layout_constraintStart_toStartOf="@id/textLeftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/yearTitle" />

    <TextView
        android:id="@+id/countryTitle"
        style="@style/PlayerTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/country_text"
        app:layout_constraintStart_toStartOf="@id/textLeftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/styleTitle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/textRightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/durationText"
        style="@style/PlayerDataTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="textEnd"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/durationTitle"
        app:layout_constraintEnd_toEndOf="@id/textRightGuideline"
        app:layout_constraintStart_toEndOf="@+id/durationTitle"
        tools:text="5:33" />

    <TextView
        android:id="@+id/albumText"
        style="@style/PlayerDataTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="textEnd"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/albumTitle"
        app:layout_constraintEnd_toEndOf="@id/textRightGuideline"
        app:layout_constraintStart_toEndOf="@+id/albumTitle"
        tools:text="Yesterday" />

    <TextView
        android:id="@+id/yearText"
        style="@style/PlayerDataTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="textEnd"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/yearTitle"
        app:layout_constraintEnd_toEndOf="@id/textRightGuideline"
        app:layout_constraintStart_toEndOf="@+id/yearTitle"
        tools:text="2005" />

    <TextView
        android:id="@+id/styleText"
        style="@style/PlayerDataTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="textEnd"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/styleTitle"
        app:layout_constraintEnd_toEndOf="@id/textRightGuideline"
        app:layout_constraintStart_toStartOf="@+id/styleTitle"
        tools:text="Жанр" />

    <TextView
        android:id="@+id/countryText"
        style="@style/PlayerDataTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/country_text"
        android:textAlignment="textEnd"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/countryTitle"
        app:layout_constraintEnd_toEndOf="@id/textRightGuideline"
        app:layout_constraintStart_toEndOf="@+id/countryTitle"
        tools:text="Великобритания" />

</androidx.constraintlayout.widget.ConstraintLayout>